vlib/v/checker/tests/lambda_undefined_variables_err.vv
fn f(g fn (int) string) {
}

fn main() {
	f(|x| s1)

	s2 := 'abc'
	f(|x| s2)
}
